0.19 Beta 2  - Under development
--------------------------------



0.19 Beta 1 "Monkey-puzzle, aka Araucaria araucana" - 2010/03/29
----------------------------------------------------------------
 * Added Hungarian translation.
 * qcommit: Give the user the option to update the branch if it is not up to
   date. (Bug #439920, Gary van der Merwe)
 * qpush, qmerge, etc.: When there are uncommit changes in the working tree,
   give the user the option to commit, or revert. (Gary van der Merwe)
 * qlog: Improve performance by using KnownGraph. (John Arbash Meinel,
   Gary van der Merwe)
 * TreeWidget dialogs (qcommit, qadd, qrevert, qbrowse):
   Performance improvements for select all, and changeing filters.
   (Bug #513105, Bug #476641, Gary van der Merwe)
 * Improve startup performance by using lazy imports. (Gary van der Merwe)

Note: qbzr now requires bzr 2.1.

0.18.5 "" - YYYY-MM-DD
----------------------
Maintenance release.

 * qsubprocess: pass command line with double and multiple backslashes 
   via temporary file. (Bug #528944, Alexander Belchenko)
 * qlog, qbrowse: Fix a bug when using with pyqt 4.7.2. (Bug #544928,
   Gary van der Merwe)


0.18.4 "Pussy-willow" - 2010/03/22
----------------------------------
Bugfixes in the stable branch. Suitable for bzr 2.1.x.

 * Improved support for Redmine bugs URL. (Bug #538414, Alexander Belchenko)
 * TreeWidget: Fix a bug where refreshing may result in data inconsistencies.
   This bug was causing a number of knock on bugs.
   (Bug #538753, Gary van der Merwe)
 * qcommit: better support of commit directly into SVN tree.
   (Bug #540363, Alexander Belchenko)


0.18.3 "Cypress" - 2010/03/03
-----------------------------
Bugfixes in the stable branch. Suitable for bzr 2.1.x.

 * Fixed problem with running diff from qannotate from qbrowse.
   (Bug #505987, Alexander Belchenko)
 * Rollback changes to qadd made in 0.18.2 which caused regression.
   (Bug #526933, Alexander Belchenko)